# Archie

./: .gitignore  CHANGELOG.md  CLAUDE.md  GITHUB_TOKEN_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  SETUP_COMPLETE.md  STARTUP_GUIDE.md  TODOS.md  docker-compose.yml  mcp.json.example  pyproject.toml  requirements.txt  run  run_mcp.py  run_server.py  setup.sh  start-dev.bat  start-dev.py  start-dev.sh  start.bat  start.py  start.sh
.archie/: models.json
.claude/: settings.local.json
DOCS/: FRONTEND_ARCHITECTURE_BLUEPRINT.md  PYTHON_ARCHITECTURE_BLUEPRINT.md
Landing/: index.html
Landing_previous/: index.html
archie/: __init__.py  install.py  manifest.py  manifest_data.py
backend/: .env.example  =0.7.0  prompts.json  requirements.txt  test_analysis_integration.py  test_blueprint_retrieval.py  test_real_structure.py
docs/: ARCHITECTURE.md  BRAINSTORM.md  SCAN_CONSOLIDATION.md  SKILLS.md  TODO.md  archie-branch-intent-design.md  archie-branch-intent-plan.md  archie-delivery-review-design.md  archie-delivery-review-plan.md  archie-detached-artifacts-design.md  archie-impact-temperature-design.md  archie-impact-temperature-plan.md  archie-intent-capture-design.md  archie-intent-capture-plan.md  archie-intent-review-delivery-plan.md  archie-intent-review-design.md  archie-llm-provider-design.md  archie-llm-provider-plan.md  archie-review-engine-v2-design.md  archie-review-engine-v2-plan.md  archie-review-rescope-plan.md  archie-rule-override-design.md  archie-rule-override-plan.md  archie-snapshot-vs-contract-implementation.md  archie-snapshot-vs-contract-plan.md  archie-system-followups.md  archie-task-story-imprint-design.md  archie-task-story-imprint-plan.md  automated-sync.md  enterprise-share-setup.md  landing-v2-prd.md  metrics-implementation-plan.md  platform-pitfalls-and-testing.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
landing/: DESIGN.md  package.json
npm-package/: LICENSE  README.md  package.json
scripts/: pack_viewer_dist.py  sync_viewer_assets.sh  verify_sync.py
src/: resources.py  server.py  tools.py
studio/: README.md  run.sh  server.py
tests/: test_agent_cli.py  test_agent_cli_api.py  test_agent_cli_tools.py  (+164 more)
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/migrations/: add_character_detection_prompt.sql  add_num_pages_to_stories.sql  prompts_table.sql
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/src/: config.py  main.py
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/src/graphs/: avatar_generator.py  memory_analyzer.py  story_generator.py
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/src/models/: character.py  memory.py  prompt.py  story.py
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/src/routes/: characters.py  memories.py  prompts.py  stories.py
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/src/utils/: firebase_admin_init.py  gemini_client.py  image_crop.py  prompt_resolver.py  supabase.py
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/tests/: conftest.py
v1/backend/storage/repos/9f9d7705-da3e-45fb-b4fd-3b342766baf8/tuck-in-tales-backend/tests/routes/: test_characters.py
(+1363 files in other folders)
