[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archie-cli"
version = "2.4.1"
description = "Your AI writes code. Archie makes sure it follows your architecture."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "BitRaptors", email = "hello@bitraptors.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
keywords = ["architecture", "enforcement", "ai", "coding-agents", "static-analysis"]
dependencies = [
    "click>=8.1.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
all = [
    "archie-cli[serve]",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "archie-cli[all]",
]

[project.scripts]
archie = "archie.cli.main:cli"

[project.urls]
Homepage = "https://github.com/BitRaptors/archie"
Repository = "https://github.com/BitRaptors/archie"
Issues = "https://github.com/BitRaptors/archie/issues"

[tool.setuptools.packages.find]
include = ["archie*"]

[tool.setuptools.package-data]
archie = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
